<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="6dp"
    android:contentDescription="@string/card_desafio_desc">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgIconeDesafio"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_leaf"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/icone_desafio_desc" />

            <TextView
                android:id="@+id/txtTitulo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/titulo_do_desafio_desc"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/textPrimary"
                android:layout_weight="1" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descricao_do_desafio_desc"
            android:textColor="@color/secondary"
            android:layout_marginTop="6dp" />

        <Button
            android:id="@+id/btnDetalhes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botao_ver_detalhes"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/primary" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
